--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="manifest" href="/manifest.json">
 </head>
 <body>
-
+<div style="background-image: url('bg.jpg');">
 	<center>
 		<table border="5">
 			<thead>
@@ -97,5 +97,6 @@
 	</script>
 	<script src="/app.js"></script>
 	<script src="/sw.js"></script>
+	</div>
 </body>
 </html>
